# nirva_service

./: .gitignore  .pre-commit-config-simple.yaml  .pre-commit-config.yaml  CLAUDE.md  DEPLOYMENT.md  Makefile  README.md  README_INCREMENTAL.md  add_deepgram_columns.sql  alembic.ini  app.py  client.py  ecosystem-server.config.js  ecosystem.config.js  ecosystem.server.config.js  environment-linux.yml  environment.yml  fix_aws_server.sh  jwt_client_test.py  jwt_server_test.py  localhost+3-key.pem  localhost+3.pem  mypy.ini  postgresql_test.py  pyproject.toml  pyrightconfig.json  requirements.txt  run1.sh  run2.sh  run_analyzer_server.py  run_app_service_server.py  run_appservice_server.py  run_chat_server.py  run_clear_db.py  run_dev_clear_db.py  run_llm_server.py  run_llm_serves.py  run_migration.py  run_pm2script.sh  run_script.py  (+8 more)
alembic/: env.py
app_services/: analyze_action_services.py  analyze_actions.py  app_service_server.py  app_service_server_fastapi.py  appservice_server_fastapi.py  chat_action_services.py  chat_actions.py  login_services.py  url_config.py  user_session.py
config/: account.py  configuration.py  test_user_account.py  user_account.py
db/: jwt.py  pgsql_client.py  pgsql_journal_file.py  pgsql_object.py  pgsql_opt.py  pgsql_user.py  pgsql_user_session.py  postgresql_client.py  postgresql_object.py  postgresql_opt.py  redis_client.py  redis_task.py  redis_upload_transcript.py  redis_user.py  redis_user_session.py
docs/: API_ENDPOINTS_REFERENCE.md  AWS_MIGRATION_AND_AUDIO_PIPELINE.md  CLIENT_INTEGRATION_GUIDE.md  DATABASE_SCHEMA_ENHANCED_CHAT.md  ENHANCED_CHAT_V2.md  ENVIRONMENT_SYNC_REPORT.md  Journal_Audio_Processing_Server_Implementation.md  incremental_analyzer_guide.md  testing_guide.md  日志1:AWS_EC2_FastAPI部署实战记录.md  日志2:SSH远程管理与进程控制实战记录.md  日志3:AWS_EC2_项目部署与环境同步实战.md  日志4-AWS_EC2_Linux环境数据库安装配置.md  日志5:AWS_EC2_Linux环境PM2与Azure_OpenAI配置实战.md
examples/: README.md  client_example.py
game/: options.py
langgraph_services/: analyzer_azure_openai_gpt_4o_graph.py  analyzer_server_app.py  analyzer_server_fastapi.py  chat_azure_openai_gpt_4o_graph.py  chat_server_app.py  chat_server_fastapi.py  langgraph_models.py  langgraph_request_task.py  langgraph_service.py
llm_serves/: chat_request_manager.py  chat_service_api.py  chat_service_request.py  chat_service_request_handler.py  chat_service_request_manager.py
llm_service/: chat_server.py  chat_service_request_handler.py  chat_service_request_manager.py
llm_services/: analyzer_azure_openai_gpt_4o_graph.py  chat_azure_openai_gpt_4o_graph.py  chat_server_app.py  chat_service_api.py  chat_service_request_handler.py  chat_service_request_manager.py  langgraph_models.py  langgraph_request_task.py  langgraph_service.py
models_v_0_0_1/: __init__.py  api.py  journal.py  models.py  prompt.py  session.py
prompt/: builtin.py  event_segmentation.md  reflection.md
scripts/: __init__.py  add_captured_at_column_aws.py  authenticated_demo_incremental_test.py  comprehensive_test_incremental.py  delete_old_audio_files.py  demo_incremental_test.py  deploy_to_server.sh  fix_precommit_issues.py  kill_ports.sh  load_env.sh  migrate_to_events_table.py  quick_fix.py  reset_events_and_transcripts.py  reset_transcriptions_for_reprocessing.py  run_sample.sh  (+18 more)
(+115 files in other folders)
